--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <body>
         <title>
             My Portfolio
         </title>
-        <header>
+        <h1>
             <img src="TowsonUlogo-horiz-color-rev-ty8n4a.png">
-        </header>
+        </h1>
+
     </head>
+</body>
 </html>
