--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <h1>
             <img src="TowsonUlogo-horiz-color-rev-ty8n4a.png">
         </h1>
-
+<p>
+    Testing this line
+</p>
     </head>
 </body>
 </html>
