--- a/index.html
+++ b/index.html
@@ -19,12 +19,20 @@
         html, p{
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
             font-size:36px;
+            color: red;
         }
         </style>
     Testing this line
 </p>
 <div></div>
 <p1>
+    <style>
+        html, p1{
+            font-family: Times New Roman;
+            font-size: 48px;
+            color: white;
+        }
+    </style>
     This is the second line
     </p1>
     
