--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
       </head>
         <body>
+            <script></script>
             <title>
             Welcome to my site!
         </title>
@@ -20,6 +21,11 @@
           </nav>
           
         <h1>
+            <style>
+                html,h1{
+                    image-resolution: 360px*360px;
+                }
+            </style>
             <img src="download.jpeg" alt="Tiger Logo">
         </h1>
   <e1>      
@@ -30,7 +36,8 @@
 <p1>
     This is the second line
     </p1>
- </e1>   
+ </e1>  
+ 
 </body>
 
 </html>
