--- a/index.html
+++ b/index.html
@@ -1,43 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
-      </head>
-        <body>
-            <script></script>
-            <title>
-            Welcome to my site!
-        </title>
-        <nav>
-            <div class="menu-icon">
-              <span class="icon"></span>
-            </div>
-            <ul class="menu">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">Blog</a></li>
-            </ul>
-          </nav>
-          
-        <h1>
-            <style>
-                html,h1{
-                    image-resolution: 360px*360px;
-                }
-            </style>
-            <img src="download.jpeg" alt="Tiger Logo">
-        </h1>
-  <e1>      
-<p>
-    Testing this line
-</p>
-<div></div>
-<p1>
-    This is the second line
-    </p1>
- </e1>  
- 
-</body>
+  <head>
+    <title>Welcome to my site!</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+    <nav>
+      <div class="menu-icon">
+        <span class="icon"></span>
+      </div>
+      <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+    </nav>
+<h1>
+  <img src="download.jpeg" alt="Tiger Logo">
+</h1>
 
+<section>
+  <p>
+    Testing this line
+  </p>
+  <div></div>
+  <p>
+    This is the second line
+  </p>
+</section>
+  </body>
 </html>
