--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="#">Blog</a></li>
+        <li><a href="#">Projects</a></li>
       </ul>
     </nav>
 <h1>
