--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
   </head>
   <body>
     <nav>
-      <div class="menu-icon">
-        <span class="icon"></span>
-      </div>
-      <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Projects</a></li>
-      </ul>
+        <div class="dropdown">
+            <button class="dropbtn">Dropdown</button>
+            <div class="dropdown-content">
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
+            </div>
+          </div>
     </nav>
 <h1>
   <img src="download.jpeg" alt="Tiger Logo">
