--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <body>
     <nav>
         <div class="dropdown">
-            <button class="dropbtn">Dropdown</button>
+            <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
-              <a href="#">Link 1</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
+              <a href="#">Projects</a>
+              <a href="#">Contact</a>
+              <a href="#">About Me</a>
             </div>
           </div>
     </nav>
