--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Welcome to my site!</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="myscript.js"></script>
   </head>
   <body>
     <nav>
@@ -16,6 +17,13 @@
           </div>
     </nav>
 <h1>
+    <style>
+h1{
+    position: fixed, center;
+    image-resolution: 360dpi;
+}
+</style>
+    
   <img src="download.jpeg" alt="Tiger Logo">
 </h1>
 
