--- a/index.html
+++ b/index.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to my site!</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="myscript.js"></script>
-  </head>
-  <body>
-    <nav>
-        <div class="dropdown">
-            <button class="dropbtn">Menu</button>
-            <div class="dropdown-content">
-              <a href="#">Projects</a>
-              <a href="#">Contact</a>
-              <a href="#">About Me</a>
-            </div>
-          </div>
-    </nav>
-<h1>
-    <style>
-h1{
-    position: fixed, center;
-    image-resolution: 360dpi;
-}
-</style>
+    <title>Welcome to my site!</title>
     
-  <img src="download.jpeg" alt="Tiger Logo">
-</h1>
-
-<section>
-  <p>
-    Testing this line
-  </p>
-  <div></div>
-  <p>
-    This is the second line
-  </p>
-</section>
-  </body>
-</html>
+    <style>
+        html, h1{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+        }
+      </style>
+    </head>
+    <body>
+      <nav>
+        <div class="dropdown">
+          <button class="dropbtn">Menu</button>
+          <div class="dropdown-content">
+            <a href="#">Projects</a>
+            <a href="#">Contact</a>
+            <a href="#">About Me</a>
+          </div>
+        </div>
+      </nav>
+      <h1>
+        <img src="download.jpeg" alt="Tiger Logo" style="width: 360px; height: 360px;">
+      </h1>
+      <section>
+        <p>
+          Testing this line
+        </p>
+        <div></div>
+        <p>
+          This is the second line
+        </p>
+      </section>
+    </body>
+  </html>
