--- a/page1/index.html
+++ b/page1/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="myscript.js"></script>
+    <script src="script.js"></script>
     <title>Welcome to my site!</title>
     
     <style>
@@ -19,7 +19,7 @@
         <div class="dropdown">
           <button class="dropbtn">Menu</button>
           <div class="dropdown-content">
-            <a href="#">Projects</a>
+            <a href="projects.html">Projects</a>
             <a href="#">Contact</a>
             <a href="#">About Me</a>
           </div>
