--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <div class="logo"></div>
+ 
+    <link rel="shortcut icon" href="download.jpeg" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
     <title>Welcome to my site!</title>
