--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <div class="logo"></div>
-  <link rel="shortcut icon" href="download.jpeg" type="image/x-icon">
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
-    <title>Welcome to my site!</title>
-    
+    <a id="title"><title>Welcome to my site!</title></a>
+    <div class="logo"></div>
+  <link rel="shortcut icon" href="download.jpeg" type="image/x-icon">
     <style>
         html, h1{
           display: flex;
