--- a/projects.html
+++ b/projects.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <link rel="stylesheet" type="text/css" href="style2.css">
-    <script src="script2.js"></script>
-    <title>
-        Projects
-    </title>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
+    <title>My Projects</title>
+    <div class="logo"></div>
+  <link rel="shortcut icon" href="download.jpeg" type="image/x-icon">
+    <style>
+        html, h1{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+        }
+      </style>
     </head>
-</html>
+    <body>
+      <nav>
+        <div class="dropdown">
+          <button class="dropbtn">Menu</button>
+          <div class="dropdown-content">
+            <a href="projects.html">Projects</a>
+            <a href="#">Contact</a>
+            <a href="#">About Me</a>
+          </div>
+        </div>
+      </nav>
+      <h1>
+        <img src="download.jpeg" alt="Tiger Logo" style="width: 360px; height: 360px;">
+      </h1>
+      <section>
+        <p>
+          Testing this line
+        </p>
+        <div></div>
+        <p>
+          This is the second line
+        </p>
+      </section>
+    </body>
+  </html>
