--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <script src="script.js"></script>
     <title>My Projects</title>
     <div class="logo"></div>
-  <link rel="shortcut icon" href="download.jpeg" type="image/x-icon">
+  <link rel="shortcut icon" href="download.jpeg.ico" type="image/x-icon">
     <style>
         html, h1{
           display: flex;
