--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="script.js"></script>
     <a id="title"><title>Welcome to my site!</title></a>
     <div class="logo"></div>
-  <link rel="shortcut icon" href="download.jpeg" type="image/x-icon">
+  <link rel="shortcut icon" href="download.jpeg.ico" type="image/x-icon">
     <style>
         html, h1{
           display: flex;
