--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
     <a id="title"><title>Welcome to my site!</title></a>
-    <div class="logo"></div>
-  <link rel="shortcut icon" href="download.jpeg.ico" type="image/x-icon">
+
+      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <style>
         html, h1{
           display: flex;
@@ -20,6 +20,7 @@
         <div class="dropdown">
           <button class="dropbtn">Menu</button>
           <div class="dropdown-content">
+            <a href="index.html">Home</a>
             <a href="projects.html">Projects</a>
             <a href="#">Contact</a>
             <a href="#">About Me</a>
