--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="dropdown-content">
             <a href="index.html">Home</a>
             <a href="projects.html">Projects</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
             <a href="#">About Me</a>
           </div>
         </div>
