--- a/projects.html
+++ b/projects.html
@@ -16,13 +16,14 @@
       </style>
     </head>
     <body>
-      <nav>
-        <div class="dropdown">
-          <button class="dropbtn">Menu</button>
-          <div class="dropdown-content">
-            <a href="projects.html">Projects</a>
-            <a href="#">Contact</a>
-            <a href="#">About Me</a>
+        <nav>
+            <div class="dropdown">
+              <button class="dropbtn">Menu</button>
+              <div class="dropdown-content">
+                <a href="index.html">Home</a>
+                <a href="projects.html">Projects</a>
+                <a href="contact.html">Contact</a>
+                <a href="#">About Me</a>
           </div>
         </div>
       </nav>
