--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,20 @@
 <html>
 <head>
   <title>My Page Title</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
   <link rel="icon" type="image/x-icon" href="/download.jpeg.ico">
 </head>
 <body>
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
+<div></div>
+<div class="content-box">
+    <h2>Box 1</h2>
+    <p>Content goes here.</p>
+  </div>
+  
 
 </body>
 </html>
