--- a/projects.html
+++ b/projects.html
@@ -31,13 +31,13 @@
         <img src="download.jpeg" alt="Tiger Logo" style="width: 360px; height: 360px;">
       </h1>
       <section>
-        <p>
-          Testing this line
-        </p>
-        <div></div>
-        <p>
-          This is the second line
-        </p>
+       <p1>
+        Testing out this page
+       </p1>
+       <div></div>
+       <p2>
+        
+       </p2>
       </section>
     </body>
   </html>
