--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,17 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 <div></div>
+<nav>
+    <div class="dropdown">
+      <button class="dropbtn">Menu</button>
+      <div class="dropdown-content">
+        <a href="index.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
+        <a href="#">About Me</a>
+      </div>
+    </div>
+  </nav>
 <div class="content-box">
     <h2>Box 1</h2>
     <p>Content goes here.</p>
