--- a/index.html
+++ b/index.html
@@ -17,17 +17,25 @@
       </style>
     </head>
     <body>
-      <nav>
-        <div class="dropdown">
-          <button class="dropbtn">Menu</button>
-          <div class="dropdown-content">
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="contact.html">Contact</a>
-            <a href="#">About Me</a>
-          </div>
-        </div>
-      </nav>
+     	<header>
+		<a class="logo" href="#home">
+<img src="TowsonLogo.png">
+		</a>
+		<nav>	
+		 <ul class="nav-bar"><div class="bg"></div>
+			<li><a class="nav-link active" href="#home">Home</a></li>
+			<li><a class="nav-link" href="#projects">Projects</a></li>
+			<li><a class="nav-link" href="#contact">Contact</a></li>
+		 </ul>
+			
+			<div class="hamburger">
+				<div class="line1"></div>
+            <div class="line2"></div>
+				<div class="line3"></div>
+        
+			</div>
+		</nav>
+	</header>
       <h1>
         <img src="download.jpeg" alt="Tiger Logo" style="width: 360px; height: 360px;">
       </h1>
