--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>My Page Title</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
-  <link rel="icon" type="image/x-icon" href="/download.jpeg.ico">
-</head>
-<body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style3.css">
+    <script src="script3.js"></script>
+    
+    <a id="title"><title>Welcome to my site!</title></a>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-<div></div>
-<nav>
-    <div class="dropdown">
-      <button class="dropbtn">Menu</button>
-      <div class="dropdown-content">
-        <a href="index.html">Home</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
-        <a href="#">About Me</a>
-      </div>
-    </div>
-  </nav>
-<div class="content-box">
-    <h2>Box 1</h2>
-    <p>Content goes here.</p>
-  </div>
-  
-
-</body>
-</html>
+      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <style>
+        html, h1{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+        }
+      </style>
+    </head>
+    <body>
+     	<header>
+		<a class="logo" href="#home">
+<img src="TowsonLogo.png">
+		</a>
+		<nav>	
+		 <ul class="nav-bar"><div class="bg"></div>
+			<li><a class="nav-link active" href="#home">Home</a></li>
+			<li><a class="nav-link" href="#projects">Projects</a></li>
+			<li><a class="nav-link" href="#contact">Contact</a></li>
+		 </ul>
+			
+			<div class="hamburger">
+				<div class="line1"></div>
+            <div class="line2"></div>
+				<div class="line3"></div>
+        
+			</div>
+		</nav>
+	</header>
+      <h1>
+        <img src="download.jpeg" alt="Tiger Logo" style="width: 360px; height: 360px;">
+      </h1>
+      <section>
+        <p>
+          Testing this line
+        </p>
+        <div></div>
+        <p>
+          This is the second line
+        </p>
+      </section>
+    </body>
+  </html>
