--- a/index.html
+++ b/index.html
@@ -18,9 +18,20 @@
     </head>
     <body>
      	<header>
+		<style>
+			a1{
+				align-items: left;
+				
+  width: 200px;
+  height: 300px;
+}
+		</style>
+
+		<a1>
 		<a class="logo" href="#home">
 <img src="TowsonLogo.png">
 		</a>
+		</a1>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
 			<li><a class="nav-link active" href="#home">Home</a></li>
