--- a/index.html
+++ b/index.html
@@ -3,52 +3,39 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
-    
-    <a id="title"><title>Welcome to my site!</title></a>
-
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <style>
-        html, h1{
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          text-align: center;
-        }
-      </style>
-    </head>
-    <body>
-     	<header>
-		
-		<a class="logo" href="#home">
-<img src="TowsonLogo.png">
-		</a>
-		
-		<nav>	
-		 <ul class="nav-bar"><div class="bg"></div>
-			<li><a class="nav-link active" href="#home">Home</a></li>
-			<li><a class="nav-link" href="#projects">Projects</a></li>
-			<li><a class="nav-link" href="#contact">Contact</a></li>
-		 </ul>
-			
-			<div class="hamburger">
-				<div class="line1"></div>
-            <div class="line2"></div>
-				<div class="line3"></div>
-        
-			</div>
-		</nav>
-	</header>
-      <h1>
-        <img src="download.jpeg" alt="Tiger Logo" style="width: 36px; height: 36px;">
-      </h1>
-      <section>
-        <p>
-          Testing this line
-        </p>
-        <div></div>
-        <p>
-          This is the second line
-        </p>
-      </section>
-    </body>
-  </html>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <title>Welcome to my site!</title>
+  </head>
+  <body>
+    <header>
+      <a class="logo" href="#home">
+        <img src="TowsonLogo.png">
+      </a>
+      <nav>	
+        <ul class="nav-bar">
+          <div class="bg"></div>
+          <li><a class="nav-link active" href="#home">Home</a></li>
+          <li><a class="nav-link" href="#projects">Projects</a></li>
+          <li><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+        <div class="hamburger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+      </nav>
+    </header>
+    <h1>
+      <img src="download.jpeg" alt="Tiger Logo">
+    </h1>
+    <section>
+      <p>
+        Testing this line
+      </p>
+      <div></div>
+      <p>
+        This is the second line
+      </p>
+    </section>
+  </body>
+</html>
