--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
       <h1>
         <img src="download.jpeg" alt="Tiger Logo" style="width: 360px; height: 360px;">
       </h1>
+	    <div class="w3-red">
+  <h2>London</h2>
+  <p>London is the most populous city in the United Kingdom,
+  with a metropolitan area of over 9 million inhabitants.</p>
+</div>
       <section>
         <p>
           Testing this line
