--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 		</a>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
-			<li><a class="nav-link active" href="#home">Home</a></li>
-			<li><a class="nav-link" href="#projects">Projects</a></li>
-			<li><a class="nav-link" href="#contact">Contact</a></li>
+			<li><a href="#home">Home</a></li>
+			<li><a href="#projects">Projects</a></li>
+			<li><a href="#contact">Contact</a></li>
 		 </ul>
 			
 			<div class="hamburger">
