--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
   </head>
   <body>
     <header>
-    
+    <style>
+      a1{
+        display: flex;
+        align-items: left;
+      }
+      <a1>
+      <img src="TowsonLogo.png" alt="Towson Logo Top">
+      </a1>
       <nav>	
         <ul class="nav-bar">
           <li><a href="#home">Home</a></li>
