--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
  
       <nav>	
         <ul class="nav-bar">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#index.html">Home</a></li>
+          <li><a href="#projects.html">Projects</a></li>
+          <li><a href="#contact.html">Contact</a></li>
         </ul>
         <div class="hamburger">
           <div class="line1"></div>
