--- a/projects.html
+++ b/projects.html
@@ -18,10 +18,10 @@
 <img src="TowsonLogo.png">
 		</a>
 		<nav>	
-		 <ul class="nav-bar"><div class="bg"></div>
-			<li><a class="nav-link active" href="#home">Home</a></li>
-			<li><a class="nav-link" href="#projects">Projects</a></li>
-			<li><a class="nav-link" href="#contact">Contact</a></li>
+		  <ul class="nav-bar"><div class="bg"></div>
+			<li><a href="#index.html">Home</a></li>
+			<li><a href="#projects.html">Projects</a></li>
+			<li><a href="#contact.html">Contact</a></li>
 		 </ul>
 			
 			<div class="hamburger">
