--- a/index.html
+++ b/index.html
@@ -4,38 +4,33 @@
     <title>Welcome to my site!</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
-    
+		<link rel="icon" href="Auto_Attack.png/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <header>
-   
-      <img src="TowsonLogo.png" alt="Towson Logo Top">
- 
-      <nav>	
-        <ul class="nav-bar">
-          <li><a href="#index.html">Home</a></li>
-          <li><a href="#projects.html">Projects</a></li>
-          <li><a href="#contact.html">Contact</a></li>
+      <div class="logo">
+        <img src="TowsonLogo.png" alt="Logo">
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="contact.html">Contact</a></li>
+					<li><a href="about-me.html">About Me</a></li>
         </ul>
-        <div class="hamburger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
       </nav>
     </header>
-    <h1>
-      <img src="download.jpeg" alt="Tiger Logo" style="width: 120px; height: 120px;">
-    </h1>
-    
     <section>
       <p>
-        Testing this line
-      </p>
-      <div></div>
-      <p>
-        This is the second line
+        Hi there! Welcome to my website, where I have contained my projects (finished and ongoing), some facts about myself, and contact information. Feel free to browse via the navigation in the upper right hand corner. Enjoy!
       </p>
     </section>
   </body>
 </html>
+
+
+
+
+
+
+
